K8S/mssql-lb-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: mssql-loadbalancer
spec:
  type: LoadBalancer
  ports:
  - port: 1433
    targetPort: 1433
    protocol: TCP
    name: mssql
  selector:
    app: mssql
