K8S/platforms-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platforms-depl
  annotations:
    kubernetes.io/change-cause: "Initial deployment of the app"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platformservice
  template:
    metadata:
      labels:
        env: prod
        app: platformservice
        app.kubernetes.io/name: platformapp
    spec:
      containers:
        - name: platformservice
          image: dasashutosh/platformservice:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: platformapp
---
apiVersion: v1
kind: Service
metadata:
  name: platforms-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: platformservice
  ports:
  - name: platformservice
    protocol: TCP
    port: 80
    targetPort: 80
