K8S/platforms-lb-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb-balancer
spec:
  selector: 
    app.kubernetes.io/name: platformapp
  ports:
    - name: platform-app-port
      protocol: TCP
      port: 8080
      targetPort: 80
  type: LoadBalancer
